[tool.poetry]
name = "annotated-transformer"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
torch = {version = "1.13.1+cu117", source= "pytorch-gpu-src"}
torchvision = {version = "0.14.1+cu117", source= "pytorch-gpu-src"}

pandas="^1.3.5"
torchdata= "^0.5"
torchtext= "^0.12"
spacy= "^3.2"
altair= "^4.1"
jupytext= "^1.13"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.12.1"
gputil = "^1.4.0"
wandb = "^0.16.1"

[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu117"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
